...
            android:id="@+id/profile_materialToolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_profile"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="프로필" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        app:iconGravity="start"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/profile_button_bookmarkBasicRecipe"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/font_custom"
        android:paddingLeft="30dp"
        android:text="즐겨찾기한 기본 레시피"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:icon="@drawable/ic_baseline_bookmarks_24"
        app:iconGravity="start"
        app:layout_constraintEnd_toEndOf="@+id/profile_button_bookmarkSharePost"
        app:layout_constraintStart_toStartOf="@+id/profile_button_bookmarkSharePost"
...
