<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/recipe_button_bookmark"
        android:icon="@drawable/ic_baseline_bookmark_false_24"
        android:title="BookMark"
        android:contentDescription="bookmark my recipe"
        app:showAsAction="ifRoom" />
</menu>