...
        android:paddingTop="15sp"
        android:shape="rectangle"
        android:text="칵테일 재료"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cock_equipButton"
        app:layout_constraintEnd_toStartOf="@+id/cock_listButton"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cock_listButton"
...
        android:drawableTop="@drawable/ic_cocktail_list_image"
        android:drawablePadding="-5dp"
        android:elevation="15dp"
        android:fontFamily="@font/nanumbarunpenb"
        android:paddingTop="15sp"
        android:shape="rectangle"
        android:text="칵테일 리스트"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cock_senseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cock_ingrdButton"
        app:layout_constraintTop_toTopOf="parent" />
...
